@@ -8,7 +8,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: parse.test,v 1.13 2003/03/31 23:19:48 dgp Exp $
+# RCS: @(#) $Id: parse.test,v 1.14 2003/04/01 07:18:37 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -808,7 +808,9 @@ test parse-18.20 {Tcl_SubstObj, exception handling} {
     list [catch {subst {abc,[return foo; expr 1+2; set {} {}{}],def}} msg] $msg
 } [list 1 "extra characters after close-brace"]
 test parse-18.21 {Tcl_SubstObj, exception handling} {
-    subst {abc,[return -code 10 foo; expr 1+2; set {} {}{}],def}
+    list [catch {
+	subst {abc,[return -code 10 foo; expr 1+2; set {} {}{}],def}
+    } msg] $msg
 } [list 1 "extra characters after close-brace"]
 
 # cleanup
